#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.68])
AC_INIT(WeekEND, 1.1, [BUG-REPORT-ADDRESS])
AM_INIT_AUTOMAKE(WeekEND, 1.1)
AC_CONFIG_SRCDIR([src/weekend.c])
AC_CONFIG_HEADERS([config.h])

# Checks for programs.
AC_PROG_CC

# Checks for libraries.

# Checks for header files.
AC_CHECK_HEADERS([stdlib.h string.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_HEADER_STDBOOL
AC_PROG_CC_C99
# Checks for library functions.

AC_OUTPUT(Makefile src/Makefile)
